add heading logo - black and white

--- a/assets/app.css
+++ b/assets/app.css
@@ -1,3 +1,23 @@
-body {
-  background: blue;
+img.header__logo-image.blk-logo {
+  display: none;
+}
+
+img.header__logo-image:not(.blk-logo) {
+  opacity: 1;
+}
+
+.is-solid img.header__logo-image:not(.blk-logo) {
+  display: none;
+}
+
+.is-solid img.header__logo-image.blk-logo {
+  display: block;
+}
+
+x-header:hover img.header__logo-image:not(.blk-logo) {
+  display: none;
+}
+
+x-header:hover img.header__logo-image.blk-logo {
+  display: block;
 }
