adding interior page template

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -21,3 +21,41 @@ display:none;
 x-header:hover img.header__logo-image.blk-logo{
 display: block;
 }
+
+// SCSS of above code
+
+// img.header__logo-image {
+//     &.blk-logo {
+//       display: none;
+//     }
+  
+//     &:not(.blk-logo) {
+//       opacity: 1;
+//     }
+//   }
+  
+//   .is-solid {
+//     img.header__logo-image {
+//       &:not(.blk-logo) {
+//         display: none;
+//       }
+  
+//       &.blk-logo {
+//         display: block;
+//       }
+//     }
+//   }
+  
+//   x-header {
+//     &:hover {
+//       img.header__logo-image {
+//         &:not(.blk-logo) {
+//           display: none;
+//         }
+  
+//         &.blk-logo {
+//           display: block;
+//         }
+//       }
+//     }
+//   }
