--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -59,3 +59,11 @@ display: block;
 //       }
 //     }
 //   }
+
+.no-trans-header img.header__logo-image {
+    display: none;
+}
+
+.no-trans-header img.header__logo-image.blk-logo {
+    display: block;
+}
